# DogBreedClassification-CNN-libtorch-Cpp

./: CMakeLists.txt  Makefile  README.md  links.txt  pytorchcnn.sln
python/: Extract VGG weights json.ipynb  Extract VGG weights json.py
python/.ipynb_checkpoints/: Extract VGG weights json-checkpoint.ipynb
src/: Source.cpp  dataloader.cpp  dataloader.h  dogbreeddataset.cpp  dogbreeddataset.h  import-export-trial.cpp  model.cpp  model.h  pch.h  src.vcxproj  src.vcxproj.filters  transforms.cpp  transforms.h
